=========
Changelog
=========

1.1.0 (unreleased)
==================

- Plone 4 support added [micecchi]

1.0.2 (2012/09/07)
==================

- Minor fixes for public release

1.0.1 (2012/01/24)
==================

- Fix overbooking (#127)

1.0 (2011-11-30)
==================

- Initial release