@@ -5,11 +5,13 @@
     <permission name="rg.prenotazioni: Add PrenotazioniFolder" acquire="False">
       <role name="Manager" />
       <role name="Contributor" />
+      <role name="Site Administrator" />
     </permission>
     <permission name="rg.prenotazioni: Add Prenotazione" acquire="False">
       <role name="Manager" />
       <role name="Contributor" />
       <role name="Anonymous" />
+      <role name="Site Administrator" />
     </permission>
   </permissions>
 </rolemap>
