@@ -6,6 +6,8 @@ Changelog
 ==================
 
 - Plone 4 support added [micecchi]
+- Added Site Administrator role in rolemap and workflows [micecchi]
+- Fixed translation for month in folder view [micecchi]
 
 1.0.2 (2012/09/07)
 ==================
